--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,12 @@
 spring.application.name=Security
 
-spring.security.user.name=navid
-spring.security.user.password=1234
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/security
-spring.datasource.username=postgres
-spring.datasource.password=2935
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.security.oauth2.client.registration.google.client-id=GOOGLE_CLIENT_ID
-spring.security.oauth2.client.registration.google.client-secret=GOOGLE_CLIENT_SECRET
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
